# dualsense

./: Cargo.toml
src/: device_manager.rs  dualsense.rs  main.rs  tray_icon.rs
src/dualsense/: async_hid.rs  constants.rs  hid.rs  mod.rs  proto.rs
