[package]
name = "dualsense"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-hid = { version = "0.4.4", features = ["async-io", "winrt"] }
futures-lite = "2.6.1"
image = "0.25.8"
smol = "2.0.2"
tao = "0.34.3"
tray-icon = "0.21.1"
zerocopy = { version = "0.8.26", features = ["derive", "std"] }
static_assertions = "1.1.0"
async-io = "2.5.0"
